--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-12.76MB/s(Youtube:不良林), server: jp-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.82MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.58MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.50MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-3.00MB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.91MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 (已存活3天)香港-4.00MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
+  - {name: 🇨🇳 中国-1007.7KB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8040, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
+  - {name: 🇯🇵 日本-1.12MB/s(Youtube:不良林), server: 185.172.113.101, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-5.18MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.77MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-1.73MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.99MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.87MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇩🇪 德国-436.7KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
   - {name: 🇫🇷 法国-1.89MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-236.0KB/s(Youtube:不良林), server: 20.123.187.212, port: 27931, type: vmess, uuid: 256eae41-0b8f-4faa-bce8-6366011dc19f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-12.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.91MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1007.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇩🇪 德国-436.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-236.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-12.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.91MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1007.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇩🇪 德国-436.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-236.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-12.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.91MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1007.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇩🇪 德国-436.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-236.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活3天)香港-4.00MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-12.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.91MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1007.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇩🇪 德国-436.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-236.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-12.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.91MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1007.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇩🇪 德国-436.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-236.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-12.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.91MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1007.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇩🇪 德国-436.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-236.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-12.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.91MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1007.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇩🇪 德国-436.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-236.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
