--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 (已存活3天)香港-4.84MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇺🇸 美国-3.67MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.73MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-5.18MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.67MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.67MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.11MB/s(Youtube:不良林), server: 185.172.113.101, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇭🇰 香港-4.07MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇳 中国-3.73MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.10MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-2.08MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.73MB/s(Youtube:不良林) 2, server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.73MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-1.87MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇩🇪 德国-436.7KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇩🇪 德国-855.8KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
   - {name: 🇫🇷 法国-1.89MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活3天)香港-4.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.10MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
-      - 🇩🇪 德国-436.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-855.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 (已存活3天)香港-4.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.10MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
-      - 🇩🇪 德国-436.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-855.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,51 +52,51 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活3天)香港-4.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.10MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
-      - 🇩🇪 德国-436.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-855.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活3天)香港-4.84MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.07MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 (已存活3天)香港-4.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.10MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
-      - 🇩🇪 德国-436.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-855.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活3天)香港-4.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.10MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
-      - 🇩🇪 德国-436.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-855.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -104,15 +104,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活3天)香港-4.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.10MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
-      - 🇩🇪 德国-436.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-855.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -129,15 +129,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活3天)香港-4.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.10MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
-      - 🇩🇪 德国-436.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-855.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
